--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-validator": "^6.14.2",
+    "express-validation": "^4.1.0",
+    "express-validator": "^6.14.3",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.4",
     "nodemon": "^2.0.20",
