--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-openid-connect": "^2.12.0",
     "express-validation": "^4.1.0",
     "express-validator": "^6.14.3",
     "mongodb": "^4.13.0",
